--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="picture-shadow"></div>
             <img id="pictureImage" class="picture-image"
                  src="./assets/img/alex.jpg"
-                 srcset="./assets/img/alexis.jpg 1x,/assets/img/alexis@2x.jpg 2x, /assets/img/alexis@3x.jpg 3x"
+                 srcset="./assets/img/alexis.JPG 1x,/assets/img/alexis@2x.JPG 2x, /assets/img/alexis@3x.JPG 3x"
                  alt="Portrait of Alexis Jiménez"
                  width="320"
                  height="320">
